test/scc/stmt/semantic-errors/002.t
void test()
{
    if (1)
        case 1:
            ;
}